OPIK-1476: Add ability to exclude fields from find spans response